# utopia-documents-mirror

./: CMakeLists.txt  configure
ambrosia/: CMakeLists.txt  Utopia.rc  main.cpp  utopia.plist.in
libambrosia/data/glsl/: CMakeLists.txt  circle-outline.vert  circle.frag  circle.vert  colour.frag  colour.vert  diffuse.frag  diffuse.vert  no_lighting.frag  no_lighting.vert  specular.frag  specular.vert  sphere-depth.frag  sphere-depth.vert  sphere.frag  sphere.vert
libathenaeum/athenaeum/: CMakeLists.txt  abstractbibliographiccollection.h  abstractbibliographicmodel.cpp  abstractbibliographicmodel.h  abstractfilter.cpp  abstractfilter.h  aggregatingproxymodel.cpp  aggregatingproxymodel.h  aggregatingproxymodel_p.h  articledelegate.cpp  articledelegate.h  articleview.cpp  articleview.h  articleview_p.h  athenaeum.qrc  bibliographicitem.cpp  bibliographicitem_p.h  bibliographicmimedata.cpp  bibliographicmimedata_p.h  bibliographicsearchbox.cpp  bibliographicsearchbox.h  bibliographicsearchbox_p.h  config.h  exporter.cpp  exporter.h  filters.cpp  filters.h  importer.cpp  importer.h  librarydelegate.cpp  librarydelegate.h  librarymodel.cpp  librarymodel.h  librarymodel_p.h  libraryview.cpp  libraryview.h  libraryview_p.h  persistentbibliographicmodel.cpp  persistentbibliographicmodel.h  persistentbibliographicmodel_p.h  (+13 more)
libcrackle/crackle/: CMakeLists.txt  CrackleFontInfo.h  CrackleTextOutputDev.cpp  CrackleTextOutputDev.h  ImageCollection.h  PDFCursor.h  PDFDocument.cpp  PDFDocument.h  PDFFont.cpp  PDFFont.h  PDFFontCollection.cpp  PDFFontCollection.h  PDFPage.cpp  PDFPage.h  PDFTextBlock.cpp  PDFTextBlock.h  PDFTextBlockCollection.h  PDFTextCharacter.cpp  PDFTextCharacter.h  PDFTextCharacterCollection.h  PDFTextLine.cpp  PDFTextLine.h  PDFTextLineCollection.h  PDFTextRegion.cpp  PDFTextRegion.h  PDFTextRegionCollection.h  PDFTextWord.cpp  PDFTextWord.h  PDFTextWordCollection.h  SimpleCollection.h  crackle.h  crackleapi.cpp  crackleapi.h  xpdfapi.h
libcrackle/crackle/libpoppler-compat/: aconf.h
libcrackle/crackle/libpoppler-compat/goo/: GList.h  GString.h
libcrackle/crackle/libxpdf/: CMakeLists.txt  GlobalParams.cc  aconf.h  aconf2.h
libgraffiti/graffiti/: CMakeLists.txt  axis.cpp  axis.h  cell.cpp  cell.h  cell_p.h  config.h  entrydelegate.cpp  entrydelegate.h  graphicsFlipWidget.cpp  graphicsFlipWidget.h  graphswidget.cpp  graphswidget.h  graphtableview.cpp  graphtableview.h  grid.cpp  grid.h  grid_p.h  gridview.cpp  gridview.h  gridview_p.h  header.cpp  header.h  header_p.h  qtcolorpicker.cpp  qtcolorpicker.h  qtcolorpicker_p.h  sections.cpp  sections.h  sections_p.h  tableeditor.qrc  tablewidget.cpp  tablewidget.h  view.cpp  view.h
libpapyro/papyro/: CMakeLists.txt  abstractbibliography.h  abstractfilter.cpp  abstractfilter.h  abstractprocessor.cpp  abstractprocessor.h  aggregatingproxymodel.cpp  aggregatingproxymodel.h  aggregatingproxymodel_p.h  annotationprocessor.cpp  annotationprocessor.h  annotationprocessoraction.cpp  annotationprocessoraction.h  annotationresultitem.cpp  annotationresultitem.h  annotationresultitem_p.h  annotator.cpp  annotator.h  annotatorrunnable.cpp  annotatorrunnable.h  annotatorrunnablepool.cpp  annotatorrunnablepool.h  annotatorrunnablepool_p.h  articledelegate.cpp  articledelegate.h  articleview.cpp  articleview.h  articleview_p.h  bibliographicmimedata.cpp  bibliographicmimedata_p.h  bibliographicsearchbox.cpp  bibliographicsearchbox.h  bibliographicsearchbox_p.h  bibliography.cpp  bibliography.h  bibliography_p.h  capabilities.cpp  capabilities.h  citation.cpp  citation.h  (+133 more)
libpapyro/papyro/citeproc/: CMakeLists.txt  citeproc.js  xmljson.js
libpapyro/papyro/citeproc/styles/: apa.json  chicago-fullnote-bibliography.json  harvard1.json  ieee.json  mla.json  nature.json  nlm.json  vancouver.json
libpapyro/papyro/cslengine/: cslengine.js
libpapyro/papyro/pages/: reset.css  results.css  results.html  results.js  results.scss  results.xml
libpapyro/papyro/pages/altmetric/: altmetric.css
libpapyro/papyro/pages/molecules/: molecules.css  molecules.js
libpapyro/papyro/pages/utils/: hyphenate.js
libutf8/examples/: CMakeLists.txt  chars.txt  compare_test.cpp  example_NFC.txt  example_NFKD.txt  example_norm.txt  norm_test.cpp  regex_test.cpp
libutopia2/plugins/python/: CMakeLists.txt  conversion.cpp  conversion.h  interpreter.cpp  interpreter.h  pyannotator.h  pyconfigurator.h  pydecorator.h  pyextension.h  pylinkfinder.h  pyoverlayrenderermapper.h  pyphraselookup.h  pyremotequery.h  pyresolver.h  python.cpp  pyvisualiser.h
libutopia2/plugins/python/coda_network/: __init__.py  connect.py  httplib.py  ntlm_auth.py  oauth_auth.py  urllib2.py  utilities.py
libutopia2/plugins/python/crackle/: CMakeLists.txt  crackleapi.i  crackleapi_python.py  pycrackleapi.h
libutopia2/plugins/python/scripts/: CMakeLists.txt  compile_urls.sh  make_zips.sh
libutopia2/plugins/python/spine/: CMakeLists.txt  pyspineapi.h  spineapi.i  spineapi_python.py
libutopia2/plugins/python/utopia/: CMakeLists.txt  __init__.py  citation.py  document.py  extension.py  library.py  parser.py  serializer.py  utopia.i  (+2 more)
libutopia2_qt/plugins/preferences/: CMakeLists.txt  networkingpreferencespane.cpp  networkingpreferencespane.h  pluginspreferencespane.cpp  pluginspreferencespane.h  pluginspreferencespane_p.h  preferences.cpp  securitypreferencespane.cpp  securitypreferencespane.h
libutopia2_qt/utopia2/qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  abstractcommentdata.h  abstractwidget.cpp  abstractwidget.h  abstractwindow.cpp  abstractwindow.h  abstractwindow_p.h  actionproxy.cpp  actionproxy.h  actionproxy_p.h  bubble.h  cache.h  cacheditem.h  closebutton.cpp  closebutton.h  combinedwidget.cpp  combinedwidget.h  config.h  configurator.cpp  configurator.h  elidedlabel.cpp  elidedlabel.h  embeddedwidget.cpp  embeddedwidget.h  fieldeditor.cpp  fieldeditor.h  filedialog.cpp  filedialog.h  filefixerdialog.cpp  filefixerdialog.h  fileformatdialog.cpp  fileformatdialog.h  flowbrowser.cpp  flowbrowser.h  flowbrowser_p.h  hidpi.cpp  hidpi.h  holdablebutton.cpp  (+61 more)
(+674 files in other folders)
